# PrepX

./: README.md  lambda.txt
agents/: .env.example  .gitignore  pyproject.toml  requirements.txt
agents/AITutor/: __init__.py  agent.py  prompts.py  tools.py
agents/Interviewer/: pyproject.toml  requirements.txt
agents/Interviewer/src/: agent.py  resume_parser.py
client/: package-lock.json  package.json  vite.config.ts
client/src/: main.tsx  router.tsx
client/src/api/: authService.ts
client/src/components/AITutor/: AITutorApp.tsx  RpcHandler.tsx  TutorSessionView.tsx  TutorWelcome.tsx  index.ts  types.ts  utils.ts
client/src/components/AiCourses/: AiCoursesPage.tsx  ArticleView.tsx  CourseDetailPage.tsx  CourseHomeView.tsx  CourseSidebar.tsx  CreateCourseDialog.tsx  EagleView.tsx  FlashcardViewer.tsx  MindMapView.tsx  QuizView.tsx  api.ts  index.ts  types.ts
client/src/components/DSA/: ProblemTable.tsx
client/src/components/Navbar/: Navbar.tsx
client/src/components/Podcast/: PodcastCard.tsx  PodcastForm.tsx  PodcastModal.tsx
client/src/config/: axiosInstance.ts
client/src/pages/AITutor/: index.ts  (+1 more)
client/src/services/: api.ts
client/src/store/: store.ts
client/src/validation/: userSchema.ts
python-server/: main.py  pyproject.toml  requirements.txt
server/: package-lock.json  package.json
server/prisma/: schema.prisma
server/src/: app.ts
server/src/ai-courses/: courseController.ts  courseGenerator.ts  courseRoute.ts
server/src/ai-tutor/: aiTutorController.ts  aiTutorRoute.ts
server/src/auth/: authController.ts  authRoute.ts
server/src/courses/: courseController.ts
server/src/industry/: industryInsights.ts
server/src/interview/: interviewController.ts  interviewRoute.ts
server/src/livekit/: livekitRoute.ts
server/src/podcast/: podcasts.ts
(+17 files in other folders)
