[project]
name = "python-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-generativeai>=0.3.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "pillow>=10.0.0",
    "pymupdf>=1.26.5",
    "pypdf>=3.0.0",
    "python-multipart>=0.0.6",
    "uuid>=1.30",
]
