[project]
name = "interviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.33.0",
    "livekit-agents[bey,google,silero,turn-detector]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
